# ketl

./: .gitmodules  CMakeLists.txt  LICENSE  NatvisFile.natvis  README.md  testsd
cmake/: mcvs_win_configure.bat  mcvs_win_open.bat  msvc_win_configure.bat  msvc_win_open.bat  msvs_win_open.bat
dependencies/: CMakeLists.txt
dependencies/luajit/lib/: lua51.lib
dependencies_tests/: CMakeLists.txt
dependencies_tests/luajit/lib/: luajit.lib
include/: common.h  compiler.h  context.h  function.h  instructions.h  ketl.h  memory.h  type.h  type_manager.h
include/compiler/: parser.h
include/ketl/: array_pool.h  assert.h  atomic_strings.h  common.h  context.h  function.h  instructions.h  int_map.h  ketl.h  linked_list.h  memory.h  object_pool.h  operators.h  stack.h  string_map.h  type.h  utils.h
include/ketl/compiler/: compiler.h  syntax_solver.h
include/memory/: gc_allocator.h  stack_allocator.h
src/: CMakeLists.txt  atomic_strings.c  common.cpp  common.h  compiler.cpp  compiler.h  context.c  context.cpp  context.h  env.cpp  env.h  function.c  function.cpp  function.h  garbage_collector.cpp  garbage_collector.h  instructions.c  instructions.h  int_map.c  ketl.c  ketl.cpp  ketl.h  ketl_new.cpp  ketl_new.h  linked_list.c  memory.h  memory_impl.h  object_pool.c  stack.c  string_map.c  type.c  type.cpp  type.h  type_manager.cpp  utils.c  variable.cpp  variable.h
src/compiler/: analyzer.cpp  analyzer.cpp_  analyzer.h  analyzer.h_  analyzer_new.cpp  analyzer_new.h  bnf_node.h  bnf_nodes.cpp  bnf_nodes.h  bnf_nodes_new.cpp  bnf_nodes_new.h  bnf_parser.c  bnf_parser.h  bnf_scheme.c  bnf_scheme.h  bnf_solver.c  bnf_solver.h  common.cpp  common.h  compiler.c  compiler.cpp  compiler.h  ir_builder.c  ir_builder.h  ir_compiler.c  ir_compiler.h  ir_node.h  ir_nodes.cpp  ir_nodes.h  lexer.c  lexer.cpp  lexer.h  linker.cpp  linker.cpp_  linker.h  linker.h_  linker_new.cpp  linker_new.h  parser.cpp  parser.h  (+19 more)
src/functions/: binary_op.cpp  binary_op.h  unary_op.h
src/memory/: default_allocator.h  gc_allocator.cpp  gc_allocator.h  stack_allocator.h
tests/: CMakeLists.txt  check_tests.cpp  check_tests.h  compile_tricks.h  main.cpp  speed_tests.cpp  speed_tests.h
tests/check_tests/: branching.cpp  functions.cpp  vars.cpp
tests/speed_tests/: branching.cpp  fibonacci.cpp  functions.cpp
